--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -1,18 +1,15 @@
 @import 'src/sass/utils/_vars.scss';
- 
-
-
 
 .footer__container {
   padding-left: 20px;
   padding-right: 20px;
 }
 
-.footer__title{
- width: 238px;
- gap: 16px;
- display: flex;
- flex-direction: column;
+.footer__title {
+  width: 238px;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer {
@@ -27,21 +24,19 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $thirdColor;
-    
   }
 
-    &__second-title {
+  &__second-title {
     font-family: $secondFamily;
     font-size: 34px;
     line-height: 39px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #d41443;
-    background-color: #fff5f6;;
+    background-color: #fff5f6;
     transform: translatey(0px);
     animation: float 6s ease-in-out infinite;
-     
-     }
+  }
 
   &__social-list {
     display: flex;
@@ -85,7 +80,7 @@
   }
   &__copyright-text {
     display: flex;
-    padding-bottom: 5px;
+    padding-bottom: 20px;
     padding-top: 56px;
     justify-content: center;
     font-weight: 700;
@@ -99,9 +94,15 @@
     justify-content: center;
   }
 }
+.footer__social-icon:hover {
+  fill: #d41443;
+}
+.footer__social-icon {
+  fill: #fea5bb;
+}
 
 //Tablet
- 
+
 @media screen and (min-width: 768px) {
   .footer::after {
     bottom: 60px;
@@ -122,37 +123,37 @@
   .footer__first-title {
     font-size: 26px;
     line-height: 30px;
-    }
+  }
 
-   .footer__second-title {
-      font-size: 48px;
-      line-height: 55px;
-      letter-spacing: 0.06em;
-}
+  .footer__second-title {
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.06em;
+  }
 }
 
 //Desktop
 
 @media screen and (min-width: 1280px) {
-  
- .footer {
-  padding-top: 120px;
- }
+  .footer {
+    padding-top: 120px;
+  }
   .footer__title {
     width: 478px;
   }
-  .footer__first-title  {
-  font-family: $secondFamily;
-  font-size: 30px;
-  line-height: 34px;
-  letter-spacing: 0.04em;
-   }
+  .footer__first-title {
+    font-family: $secondFamily;
+    font-size: 30px;
+    line-height: 34px;
+    letter-spacing: 0.04em;
+  }
 
-   .footer__second-title {
+  .footer__second-title {
     font-size: 58px;
     line-height: 66px;
-    letter-spacing: 0.06em;}
-  
+    letter-spacing: 0.06em;
+  }
+
   .footer__container {
     padding-left: 16px;
     padding-right: 16px;
@@ -165,11 +166,12 @@
     width: 150px;
   }
 
-.footer__copyyright-text {
-  padding-top: 67px;
-}
+  .footer__copyyright-text {
+    padding-top: 67px;
+    padding-bottom: 20px;
+  }
 
-.footer::after {
-  bottom: 60px;
-}
+  .footer::after {
+    bottom: 60px;
+  }
 }
