--- a/src/sass/components/_contact-section.scss
+++ b/src/sass/components/_contact-section.scss
@@ -7,14 +7,13 @@
   padding-left: 20px;
   padding-right: 20px;
   justify-content: center;
-    display: flex;
-    width: auto;
+  display: flex;
+  width: auto;
 }
 
 .contacts-list {
-   display: flex;
- 
-  
+  display: flex;
+
   &__item-product {
     color: $whiteColor;
   }
@@ -24,8 +23,8 @@
     padding: 2px 10px;
     width: 75px;
     text-align: center;
-     margin-bottom: 20px;
-     width: 138px;
+    margin-bottom: 20px;
+    width: 138px;
   }
   &__item-cafe {
     background: #f0d1a5;
@@ -37,7 +36,8 @@
   }
   &__item {
     display: flex;
-    flex-direction: column;.contacts-list-btn {
+    flex-direction: column;
+    .contacts-list-btn {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -83,26 +83,25 @@
   }
 }
 
- .contact-list__item-link {
+.contact-list__item-link {
   text-decoration: none;
-   color: #907e82;
+  color: #907e82;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: $primaryColor;
   }
 }
-  .contacts-list {
-    flex-direction: column;
-    gap: 20px;
-  }
-  .contacts-list__item {
-    width: 280px;
-    
-  }
-   .footer__copyright-text {
-    width: 150px;
-  }
+.contacts-list {
+  flex-direction: column;
+  gap: 20px;
+}
+.contacts-list__item {
+  width: 280px;
+}
+.footer__copyright-text {
+  width: 150px;
+}
 //button
 
 .contacts-list-btn {
@@ -128,8 +127,7 @@
   &:focus {
     cursor: pointer;
   }
- }
- 
+}
 
 .contacts-list-btn__item-franchise {
   background: $whiteColor;
@@ -162,12 +160,14 @@
     justify-content: space-between;
     flex-direction: row;
     padding-bottom: 40px;
-}
-.contacts-list-btn__item-locations {
-    padding: 10px 35px;}
+  }
+  .contacts-list-btn__item-locations {
+    padding: 10px 35px;
+  }
 
-    .contacts-list-btn__item-franchise {
-      padding: 12px 32px;}
+  .contacts-list-btn__item-franchise {
+    padding: 12px 32px;
+  }
 
   .contacts-list__item {
     width: 224px;
@@ -178,18 +178,20 @@
     gap: 15px;
     flex-direction: row;
   }
-  
+  .footer__copyright-text {
+    width: 280px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-   
   .contacts-list-btn__item-locations {
-        padding: 10px 35px;}
+    padding: 10px 35px;
+  }
 
+  .contacts-list-btn__item-franchise {
+    padding: 10px 32px;
+  }
 
-.contacts-list-btn__item-franchise {
-    padding: 10px 32px;}
-  
   .contacts-list {
     padding-left: 16px;
     padding-right: 16px;
@@ -202,8 +204,10 @@
     height: 538px;
   }
   .contacts-list-btn {
-   flex-direction: row;
-   gap: 12px;
+    flex-direction: row;
+    gap: 12px;
   }
-  
+  .footer__copyright-text {
+    width: 280px;
+  }
 }
