--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -12,11 +12,7 @@ p,h1,h2,h3{
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
-
     width: 220px;
-    // font-size: 8px;
-    // font-size: 14px;
-    // line-height: 194%;
     color: $gray-color;
     display: none;
 
@@ -92,9 +88,17 @@ p,h1,h2,h3{
         color: $primary-color;
         // position: absolute;
         // top: 632px;
-        
-        
     }
+
+	&__background-container{
+		background: url(/src/images/made-background-M-1x.png);
+		background-repeat: no-repeat;
+		position: absolute;
+		width: 280px;
+		height: 133px;
+		// bottom: 195px;
+		top: 148px;
+	}
 }
 
 .made-section__text--text1{
@@ -125,16 +129,6 @@ p,h1,h2,h3{
 	line-height: 162%;
 	margin-bottom: 15px;
 	
-}
-
-.made-section__background-container{
-	background: url(/src/images/made-background-M-1x.png);
-	background-repeat: no-repeat;
-	position: absolute;
-	width: 280px;
-	height: 133px;
-	// bottom: 195px;
-	top: 148px;
 }
 
 .made-section__text--text3{
@@ -233,6 +227,10 @@ p,h1,h2,h3{
 		display: flex;
 		gap: 32px;
 
+		&__background-container{
+			display: none;
+		}
+
 	}
 
 	.made-section__button{
@@ -250,7 +248,16 @@ p,h1,h2,h3{
 	{
 		font-size: 14px;
 		line-height: 176%;
+		width: 334px;
 	}
+
+	#how-button__text {
+		display: none;
+		width: 334px;
+		font-size: 14px;
+		line-height: 176%;
+		letter-spacing: 0.04em;
+	  }
 
 	.made-section__button{
 		font-size: 16px;
@@ -266,6 +273,11 @@ p,h1,h2,h3{
 		&__text{
 			font-size: 14px;
 			line-height: 174%;
+			margin-bottom: 64px;
+			width: 159px;
+		}
+		&__svg{
+			margin-bottom: 36px;
 		}
 	}
 
@@ -276,11 +288,6 @@ p,h1,h2,h3{
     	flex-direction: row;
 		gap: 4px;
 	}
-
-	#how-button__text {
-		display: none;
-		width: auto;
-	  }
 
 }
 
@@ -297,10 +304,12 @@ p,h1,h2,h3{
 		&__subtitle{
 			font-size: 30px;
 			line-height: 34px;
+			letter-spacing: 0.04em;
 		}
 		&__title{
 			font-size: 58px;
 			line-height: 66px;
+			letter-spacing: 0.06em;
 		}
 	}
 
@@ -308,7 +317,11 @@ p,h1,h2,h3{
 		background: url(../images/made-background-D-1x.png);
     	background-repeat: no-repeat;
 		display: flex;
-		gap: 32px;
+		gap: 99px;
+
+		&__background-container{
+			display: none;
+		}
 	}
 
 	.made-section__image{
@@ -320,6 +333,8 @@ p,h1,h2,h3{
 	{
 		font-size: 16px;
 		line-height: 176%;
+		width: 463px;
+		padding-top: 90px;
 	}
 
 	.made-section__text--text2 ,
@@ -327,11 +342,20 @@ p,h1,h2,h3{
 	{
 		font-size: 14px;
 		line-height: 194%;
+		width: 463px;
 	}
 
+	#how-button__text {
+		display: none;
+		width: 463px;
+		font-size: 14px;
+		line-height: 194%;
+	  }
+
 	.made-section__text--text3{
-		padding-bottom: 40px;
+		margin-bottom: 40px;
 	}
+
 
 	.made-section__button{
 		font-size: 16px;
@@ -347,25 +371,25 @@ p,h1,h2,h3{
 		&__title{
 			font-size: 58px;
 			line-height: 66px;
-			text-align: right;
 
 		}
 		&__text{
 			font-size: 16px;
 			line-height: 176%;
 			letter-spacing: 0.02em;
+			width: 288px;
+		}
+		&__svg{
+			margin-bottom: 40px;
 		}
 	}
+
 
 	.quantity__item--margin
 	{
 		margin-right: 55px;
 	}
 
-	#how-button__text {
-		display: none;
-		width: auto;
-	  }
 
 }
 
