--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -80,6 +80,14 @@ p, h1, h2, h3 {
   text-align: center;
   color: #d41443;
 }
+.made-section__background-container {
+  background: url(/src/images/made-background-M-1x.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 280px;
+  height: 133px;
+  top: 148px;
+}
 
 .made-section__text--text1 {
   font-weight: 500;
@@ -100,15 +108,6 @@ p, h1, h2, h3 {
   font-size: 12px;
   line-height: 162%;
   margin-bottom: 15px;
-}
-
-.made-section__background-container {
-  background: url(/src/images/made-background-M-1x.png);
-  background-repeat: no-repeat;
-  position: absolute;
-  width: 280px;
-  height: 133px;
-  top: 148px;
 }
 
 .made-section__text--text3 {
@@ -187,6 +186,9 @@ p, h1, h2, h3 {
     display: flex;
     gap: 32px;
   }
+  .made-section__background-container {
+    display: none;
+  }
   .made-section__button {
     font-size: 16px;
     line-height: 21px;
@@ -199,6 +201,14 @@ p, h1, h2, h3 {
   .made-section__text--text3 {
     font-size: 14px;
     line-height: 176%;
+    width: 334px;
+  }
+  #how-button__text {
+    display: none;
+    width: 334px;
+    font-size: 14px;
+    line-height: 176%;
+    letter-spacing: 0.04em;
   }
   .made-section__button {
     font-size: 16px;
@@ -211,6 +221,11 @@ p, h1, h2, h3 {
   .quantity__text {
     font-size: 14px;
     line-height: 174%;
+    margin-bottom: 64px;
+    width: 159px;
+  }
+  .quantity__svg {
+    margin-bottom: 36px;
   }
   .quantity__list {
     margin: 0px;
@@ -218,10 +233,6 @@ p, h1, h2, h3 {
     display: flex;
     flex-direction: row;
     gap: 4px;
-  }
-  #how-button__text {
-    display: none;
-    width: auto;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -233,16 +244,21 @@ p, h1, h2, h3 {
   .made__subtitle {
     font-size: 30px;
     line-height: 34px;
+    letter-spacing: 0.04em;
   }
   .made__title {
     font-size: 58px;
     line-height: 66px;
+    letter-spacing: 0.06em;
   }
   .made-section {
     background: url(../images/made-background-D-1x.png);
     background-repeat: no-repeat;
     display: flex;
-    gap: 32px;
+    gap: 99px;
+  }
+  .made-section__background-container {
+    display: none;
   }
   .made-section__image {
     width: 501px;
@@ -251,14 +267,23 @@ p, h1, h2, h3 {
   .made-section__text--text1 {
     font-size: 16px;
     line-height: 176%;
+    width: 463px;
+    padding-top: 90px;
   }
   .made-section__text--text2,
   .made-section__text--text3 {
     font-size: 14px;
     line-height: 194%;
+    width: 463px;
+  }
+  #how-button__text {
+    display: none;
+    width: 463px;
+    font-size: 14px;
+    line-height: 194%;
   }
   .made-section__text--text3 {
-    padding-bottom: 40px;
+    margin-bottom: 40px;
   }
   .made-section__button {
     font-size: 16px;
@@ -271,19 +296,18 @@ p, h1, h2, h3 {
   .quantity__title {
     font-size: 58px;
     line-height: 66px;
-    text-align: right;
   }
   .quantity__text {
     font-size: 16px;
     line-height: 176%;
     letter-spacing: 0.02em;
+    width: 288px;
+  }
+  .quantity__svg {
+    margin-bottom: 40px;
   }
   .quantity__item--margin {
     margin-right: 55px;
-  }
-  #how-button__text {
-    display: none;
-    width: auto;
   }
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
