--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -1,6 +1,19 @@
 @import 'src/sass/utils/_vars.scss';
 
 /*Header*/
+@media screen and (max-width: 767px) {
+  .container-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 6px;
+  }
+}
+
+
 
 .btn-nav {
   display: none;
@@ -126,27 +139,16 @@ header {
   &__pictures-milk,
   &__pictures-eat {
     display: none;
+  }
 
     &__pictures-ice {
       position: absolute;
-      bottom: 0;
-      left: 117px;
+       
     }
-
-    //   &__pictures::after {
-    //     content: "";
-    //     width: 346px;
-    //     height: 344px;
-    //     border-radius: 50%;
-    //     background-color: $secondaryColor;
-    //     display: block;
-    //     position: absolute;
-    //     z-index: -2;
-    //     top: 83px;
-    //     left: 36px;}
-    // }
   }
-}
+
+
+
 
 @media screen and (min-width: 768px) {
   .btn-wrapper {
@@ -348,6 +350,11 @@ header {
 }
 
 @media screen and (min-width: 1280px) {
+
+  .arrow-button--mod {
+    width: 26px;
+    height: 26px;}
+
   .container-header {
     width: 1280px;
     padding-left: 16px;
@@ -453,20 +460,18 @@ header {
       padding: 11px 23px;
     }
     &__about-milk {
-      padding-bottom: 84px;
-      width: 470px;
-      padding-left: 286px;
+            width: 470px;
+           padding-bottom: 53px;
+      padding-left: 230px;
     }
     &__about-milk-details {
       font-size: 14px;
       line-height: 140%;
       color: $whiteColor;
       margin-bottom: 20px;
+      width: 200px;
     }
-    &__number-list {
-      padding-bottom: 156px;
-    }
-    &__title {
+      &__title {
       display: flex;
       flex-direction: column;
       width: 277px;
@@ -476,7 +481,7 @@ header {
       display: flex;
       flex-direction: column;
       gap: 24px;
-      position: absolute;
+       
     }
 
     &__number-list-text {
@@ -508,7 +513,7 @@ header {
         display: block;
         position: absolute;
         right: -15px;
-        bottom: 49px;
+        bottom: 42px;
         width: 30px;
         height: 30px;
       }
@@ -518,7 +523,7 @@ header {
       padding-right: 16px;
       right: 0;
       left: auto;
-
+      width: 304px;
       position: absolute;
 
       bottom: 0;
@@ -531,12 +536,14 @@ header {
       bottom: 0;
       right: 328px;
       z-index: 3;
+      width: 236px;
     }
 
     &__pictures-milk {
       position: absolute;
       bottom: 60px;
-      padding: 0;
+      width: 213px;
+      
     }
 
     &__pictures {
@@ -549,8 +556,8 @@ header {
         position: absolute;
         width: 534px;
         height: 534px;
-        bottom: 150px;
-        right: 161px;
+        bottom: 72px;
+    right: 139px;
       }
     }
   }
