--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -4,6 +4,7 @@ p,h1,h2,h3{
 
 .how_button{
 	display: none;
+	
 }
 
 #how-button__text {
@@ -15,7 +16,6 @@ p,h1,h2,h3{
     width: 220px;
     color: $gray-color;
     display: none;
-
   }
 
 
@@ -50,14 +50,11 @@ p,h1,h2,h3{
 }
 
 .made-section{
-    // background: url(/src/images/made-background-M-1x.png);
-	// background-repeat: no-repeat;
+
 	background-color: $secondary-background-color;
     font-family: 'DM Sans';
     font-style: normal;
 	padding-bottom: 40px;
-    
-	// flex-direction: column;
 
     &__image{
 		width:280px;
@@ -71,7 +68,6 @@ p,h1,h2,h3{
         display: flex;
 		position: relative;
         flex-direction: column;
-        // align-items: start;
     }
 
     &__button{
@@ -86,8 +82,7 @@ p,h1,h2,h3{
         align-items: center;
         text-align: center;
         color: $primary-color;
-        // position: absolute;
-        // top: 632px;
+		
     }
 
 	&__background-container{
@@ -96,17 +91,12 @@ p,h1,h2,h3{
 		position: absolute;
 		width: 280px;
 		height: 133px;
-		// bottom: 195px;
 		top: 148px;
 	}
 }
 
 .made-section__text--text1{
     
-    // font-size: 16px;
-    // line-height: 176%;
-    // padding-top: 90px;
-	// width: 220px;
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
@@ -184,8 +174,6 @@ p,h1,h2,h3{
 		letter-spacing: 0.04em;
 		text-transform: uppercase;
         color: $primary-color;
-        // text-align: left;
-        // margin: 0px;
     }
 
     &__text{
@@ -195,7 +183,6 @@ p,h1,h2,h3{
 		line-height: 170%;
         color: $black-color;
 		width: 230px;
-        // text-align: left;
     }
 
 }
@@ -240,6 +227,7 @@ p,h1,h2,h3{
 
 	.made-section__image{
 		width: 336px;
+		align-self: center;
 	}
 
 	.made-section__text--text1 ,
@@ -287,6 +275,10 @@ p,h1,h2,h3{
 		display: flex;
     	flex-direction: row;
 		gap: 4px;
+	}
+
+	.quantity__item--padding{
+		padding-left: 18px;
 	}
 
 }
@@ -416,10 +408,5 @@ p,h1,h2,h3{
 			background: url(../images/made-background-D-2x.png);
 			background-repeat: no-repeat;
 		}
-		.made-section__button{
-			position: absolute;
-        	top: 632px;
-		}
 
-		
 	}
