--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -195,6 +195,7 @@ p, h1, h2, h3 {
   }
   .made-section__image {
     width: 336px;
+    align-self: center;
   }
   .made-section__text--text1,
   .made-section__text--text2,
@@ -233,6 +234,9 @@ p, h1, h2, h3 {
     display: flex;
     flex-direction: row;
     gap: 4px;
+  }
+  .quantity__item--padding {
+    padding-left: 18px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -325,9 +329,5 @@ p, h1, h2, h3 {
   .made-section {
     background: url(../images/made-background-D-2x.png);
     background-repeat: no-repeat;
-  }
-  .made-section__button {
-    position: absolute;
-    top: 632px;
   }
 }/*# sourceMappingURL=main.css.map */
