--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -23,42 +23,39 @@
                 <h2 class="made__title">how it’s made?</h2>
         
                 <div class="made-section">
-                    
-                        <picture class="made-section__image">
-                            <source media="screen and (max-width: 767px)" srcset="./images/made-M-1x.png 1x, ./images/made-M-2x.png 2x" />
-                            <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x " />
-                        
-                            <source media="screen and (min-width: 1280px)" srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x " />
-                        
-                            <img src="/src/images/made-D-1x.png" alt="cow1">
-                        
-                        </picture>
-                        
-                        
-                        
-                        <!-- <img class="made-section__image" src="/src/images/made-M-1x.png" alt="cow"> width="501px"-->
+                    <picture class="made-section__image">
+                        <source media="screen and (max-width: 767px)"
+                            srcset="./images/made-M-1x.png 1x, ./images/made-M-2x.png 2x" />
+                        <source media="screen and (min-width: 768px) and (max-width: 1279px)"
+                            srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x " />
+        
+                        <source media="screen and (min-width: 1280px)"
+                            srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x " />
+        
+                        <img src="/src/images/made-D-1x.png" alt="cow1">
+        
+                    </picture>
+        
+        
                     <div class="made-section__text">
                         <p class="made-section__text made-section__text--text1">Fusce ut velit laoreet, tempus arcu eu, molestie
-                            tortor. <br> Nam vel justo cursus, faucibus lorem eget, egestas eros. <br> Maecenas eleifend erat at
+                            tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
                             justo fringilla.</p>
+        
+                        <div class="made-section__background-container">
+                        </div>
 
-                            <div class="made-section__background-container">
-                                
-
-                            </div>
-
-                            <!-- <img class="made-section__background" src="/src/images/made-background-M-1x.png" alt=""> -->
                         <p class="made-section__text made-section__text--text2">Curabitur lacinia enim at ex blandit, vel
-                            pellentesque odio <br> elementum. Mauris rhoncus orci in imperdiet placerat. <br> Vestibulum euismod
-                            nisl suscipit ligula volutpat, a feugiat urna <br> maximus. Cras massa nibh, tincidunt. <br>
+                            pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod
+                            nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
                         </p>
                         <p class="made-section__text made-section__text--text3">Aliquam erat volutpat. Aenean accumsan.</p>
         
                         <div class="how-button">
                             <p id="how-button__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                         </div>
-
-                        <button class="made-section__button"  type="button" onclick="howButton()" >Read more &nbsp;
+        
+                        <button class="made-section__button" type="button" onclick="howButton()">Read more &nbsp;
                             <svg class="" width="7px" height="8px">
                                 <use href="./images/icons-svg-how.svg#icon-Vector-1"></use>
         
@@ -72,34 +69,29 @@
                     <div class="quantity__container">
                         <ul class="quantity__list">
                             <li class="quantity__item quantity__item--margin">
-                                <!-- <div class="quantity__svg-container"> -->
-                                    <svg class="quantity__svg" width="33px" height="50px">
-                                        <use href="/src/images//icons-svg-how.svg#icon-Group-5"></use>
-        
-                                    </svg>
-                                    <p class="quantity__title">721</p>
-                                    <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                                <!-- </div> -->
+                                <svg class="quantity__svg" width="33px" height="50px">
+                                    <use href="/src/images//icons-svg-how.svg#icon-Group-5"></use>
+                                </svg>
+                                <p class="quantity__title">721</p>
+                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                             </li>
                             <li class="quantity__item">
-
-                                    <svg class="quantity__svg" width="50px" height="50px">
-                                        <use href="/src/images/icons-svg-how.svg#icon-apples"></use>
         
-                                    </svg>
-                                    <h3 class="quantity__title">16kg</h3>
-                                    <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-
+                                <svg class="quantity__svg" width="50px" height="50px">
+                                    <use href="/src/images/icons-svg-how.svg#icon-apples"></use>
+                                </svg>
+                                <h3 class="quantity__title">16kg</h3>
+                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        
                             </li>
-                            <li class="quantity__item">
-
-                                    <svg class="quantity__svg" width="44px" height="50px">
-                                        <use href="/src/images/icons-svg-how.svg#icon-Group-6"></use>
+                            <li class="quantity__item quantity__item--padding">
         
-                                    </svg>
-                                    <h3 class="quantity__title">84</h3>
-                                    <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                                <svg class="quantity__svg" width="44px" height="50px">
+                                    <use href="/src/images/icons-svg-how.svg#icon-Group-6"></use>
+                                </svg>
 
+                                <h3 class="quantity__title">84</h3>
+                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                             </li>
                         </ul>
                     </div>
