--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -49,8 +49,7 @@
         cursor: pointer;
   }
 }
-  
-    &__buy-btn {
+   &__buy-btn {
       font-family: "DM Sans";
       font-style: normal;
       font-weight: 700;
@@ -70,6 +69,9 @@
         background: #ECEBEB;
         cursor: pointer;
       }
+    }
+    &__btn-icon {
+      margin-left:16px;
     }
 
     &__menu-btn {
@@ -246,10 +248,6 @@
 .no-display{
   display:none;
 }
-.menu-toggle,
-.menu-container {
-    visibility: inherit; 
-} 
 .header {
   &__menu-btn {
   display: initial;
@@ -319,31 +317,37 @@
   }
 }
 }
+
 @media (max-width: 320px) {
   .header-section {
-    padding: 0 16px;
+    overflow: hidden;
     background: #ffb8ca;
     background-repeat: no-repeat;
     background-image:  url("../images/header/icecream-m.png"), url("../images/header/elipse-m.png");
-    background-position:  top 95% right 30%, top 60% right 0%;
-    padding: 8px 20px 0 20px;
+    background-position:  top 100% right 30%, top 60% right 0%;
   }
   @media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .header-section {
-    background-position:  top 95% right 30%, top 60% right 0%;
+    background-position:  top 100% right 30%, top 60% right 0%;
     background-image: url("../images/header/icecream-m@2x.png") 171px, url("../images/header/elipse-m@2x.png");
   }
 }
 .header {
+  padding: 8px 0 0 0;
   &__icon{
   margin-right: 41px;
   padding: 0;
 }
-  .__menu-btn {
+  &__menu-btn {
     display: initial;
+  }
+  &__buy-btn{
+    display: none;
+  }
+}
 .hero{
   padding: 151px 0 158px 0;
   &__title{
@@ -358,11 +362,6 @@
 } 
 .no-display {
   display: none;
-}
-.header{
-  &__buy-btn{
-    display: none;
-  }
 }
 .menu-toggle {
   visibility: inherit;
