--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,5 +1,6 @@
-.mobile-menu {
-    position: relative;
+
+@media (min-width: 320px) and (max-width: 768px){
+.nav-menu {
     background: #E17992;
     width: 254px;
     height: 1020px; 
@@ -16,9 +17,6 @@
     &:hover,
     &:focus {
     cursor: pointer;
-    position: fixed;
-    top: 0;
-    left: 0;
     }
     }
     &__close-icon {
@@ -55,7 +53,6 @@
         cursor: pointer;
   }
 }
-  
     &__buy-btn {
       font-family: "DM Sans";
       font-style: normal;
@@ -69,7 +66,7 @@
       background: #ffffff;
       border: none;
       border-radius: 22px;
-      margin: 0 0 20px 0;
+      margin: 23px 0 20px 0;
       padding: 12px 59px 12px 43px;
       &:hover,
       &:focus {
@@ -77,14 +74,112 @@
         cursor: pointer;
       }
     }
-
     &__menu-btn {
       background-color: transparent;
       border:none;
       display:none;
     }
-
-    &__rule {
-    width: 254px;   
-}
   }
+  .menu-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  transform: translateX(100%);
+}
+.menu-container.is-open {
+      transform: translateX(0);
+    }
+}
+@media (max-width: 320px) {
+  .nav-menu {
+    padding: 0;
+    background: #E17992;
+    width: 250px;
+    height: 502px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__btn {
+    border: none;
+    background: none;
+    position: absolute;
+    top: 20px;
+    right: 32px;
+    &:hover,
+    &:focus {
+    cursor: pointer;
+    }
+    }
+    &__close-icon {
+        fill: #ffffff;
+    }
+    &__icon {
+      margin: 0 auto 0 0;
+    }
+    &__list {
+      display: flex;
+      flex-direction: column;
+      gap:unset;
+      list-style: none;
+      margin: 0 auto 0 auto;
+      padding: 0;
+    }
+    &__item {
+      width: 250px;
+      height: 42px;
+      border: 1px solid #E18298;
+      font-family: "DM Sans";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 18px;
+      display: flex;
+      align-items: center;
+      color: #ffffff;
+      text-decoration: none;
+      padding-left: 20px;
+      &:hover,
+      &:focus {
+        color: #D41443;
+        cursor: pointer;
+  }
+}
+    &__buy-btn {
+      font-family: "DM Sans";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 21px;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      color: #d41443;
+      background: #ffffff;
+      border: none;
+      border-radius: 22px;
+      padding: 12px 70px 12px 48px;
+      margin-top: 60px ;
+      &:hover,
+      &:focus {
+        background: #ECEBEB;
+        cursor: pointer;
+      }
+    }
+    &__menu-btn {
+      background-color: transparent;
+      border:none;
+      display:none;
+    }
+  }
+  .menu-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  transform: translateX(100%);
+}
+.menu-container.is-open {
+      transform: translateX(0);
+    }
+}
