--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -118,7 +118,10 @@
           </button>
         </li>
         <li>
-          <button data-modal-open class="buttons__items buttons--second">
+          <button
+            footer-data-modal-open-1
+            class="buttons__items buttons--second"
+          >
             Franchise
             <svg width="4.43" height="8">
               <use href="/src/images/icons-footer.svg#icon-button2"></use>
@@ -175,3 +178,76 @@
     </div>
   </div>
 </footer>
+
+<div class="modal-footer-1 footer-is-hidden" footer-data-modal-1>
+  <div class="modal-footer-1__inner container">
+    <h3 class="modal-footer-1__title">
+      Leave your details and maybe we will call you back
+    </h3>
+    <button footer-data-modal-close-1 class="modal-footer-1__button">
+      <svg class="modal-footer-1__svg" height="20px" height="20px">
+        <use href="/src/images/icons-footer.svg#icon-close"></use>
+      </svg>
+    </button>
+    <form class="form" name="contact-form">
+      <label class="form__items">
+        Name
+        <input class="form__input" type="text" name="name" />
+      </label>
+      <label class="form__items">
+        Number
+        <input class="form__input" type="tel" name="telephone" />
+      </label>
+      <label class="form__items">
+        E-mail
+        <input class="form__input" type="mail" name="mail" />
+      </label>
+      <label class="form__items">
+        a few words, my darling
+        <textarea
+          class="form__text-area"
+          placeholder="Write here..."
+          name="comments"
+        ></textarea>
+      </label>
+      <label class="form__items-terms"> </label>
+      <button class="button-footer" type="submit">Send</button>
+    </form>
+  </div>
+</div>
+<div data-modal-2 class="modal-2 is-hidden-2">
+  <div class="modal-2__inner container">
+    <button data-modal-close-2 class="modal-2__button-close">
+      <svg class="modal__svg" height="20px" height="20px">
+        <use href="/src/images/icons-footer.svg#icon-close"></use>
+      </svg>
+    </button>
+    <p class="modal-2__title">We will be glad to see you</p>
+    <div class="modal-2__container">
+      <iframe
+        class="modal-2__maps"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2847.138608655672!2d26.083469150372697!3d44.47133150705823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b2021313897175%3A0x4bc1aad4cfb7d402!2sBetty%20Ice!5e0!3m2!1sro!2sro!4v1680903553136!5m2!1sro!2sro"
+        width="400"
+        height="300"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+    <p class="modal-2__adress">
+      <svg class="modal-2__location-svg" width="30px" height="60px">
+        <use href="/src/images/icons-footer.svg#location"></use>
+      </svg>
+      Bulevardul Aviatorilor 106, București 014192
+    </p>
+    <button class="modal-2__button">
+      <a
+        target="_blank"
+        href="https://www.google.com/maps/place/Betty+Ice/@44.4713277,26.0856632,17z/data=!3m1!4b1!4m6!3m5!1s0x40b2021313897175:0x4bc1aad4cfb7d402!8m2!3d44.4713277!4d26.0856632!16s%2Fg%2F11cs18jx41"
+        class="modal-2__btn-text"
+        >Open in Google Maps</a
+      >
+    </button>
+  </div>
+</div>
