--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -7,10 +7,6 @@ p, h1, h2, h3 {
   margin: 0;
 }
 
-.how_button {
-  display: none;
-}
-
 #how-button__text {
   font-family: "DM Sans";
   font-style: normal;
@@ -86,7 +82,7 @@ p, h1, h2, h3 {
   position: absolute;
   width: 280px;
   height: 133px;
-  top: 148px;
+  top: 127px;
 }
 
 .made-section__text--text1 {
@@ -211,10 +207,6 @@ p, h1, h2, h3 {
     line-height: 176%;
     letter-spacing: 0.04em;
   }
-  .made-section__button {
-    font-size: 16px;
-    line-height: 21px;
-  }
   .quantity__title {
     font-size: 48px;
     line-height: 55px;
@@ -274,28 +266,24 @@ p, h1, h2, h3 {
     width: 463px;
     padding-top: 90px;
   }
+  .made-section__button {
+    font-size: 16px;
+    line-height: 21px;
+  }
   .made-section__text--text2,
   .made-section__text--text3 {
     font-size: 14px;
     line-height: 194%;
     width: 463px;
   }
+  .made-section__text--text3 {
+    margin-bottom: 40px;
+  }
   #how-button__text {
     display: none;
     width: 463px;
     font-size: 14px;
     line-height: 194%;
-  }
-  .made-section__text--text3 {
-    margin-bottom: 40px;
-  }
-  .made-section__button {
-    font-size: 16px;
-    line-height: 21px;
-  }
-  .quantity__list {
-    flex-direction: row;
-    gap: 60px;
   }
   .quantity__title {
     font-size: 58px;
@@ -310,19 +298,23 @@ p, h1, h2, h3 {
   .quantity__svg {
     margin-bottom: 40px;
   }
+  .quantity__list {
+    flex-direction: row;
+    gap: 60px;
+  }
   .quantity__item--margin {
     margin-right: 55px;
   }
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-  .made-section {
+  .made-section__background-container {
     background: url(../images/made-background-M-2x.png);
-    background-repeat: no-repeat;
+    top: 130px;
   }
 }
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .made-section {
-    background: none;
+@media screen and (min-width: 768px) and (max-width: 1279px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1279px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1279px) and (min-resolution: 2dppx) {
+  .made-section__background-container {
+    display: none;
   }
 }
 @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
