versiunea mobila header

--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -1,19 +1,17 @@
 @import 'src/sass/utils/_vars.scss';
 
 /*Header*/
-@media screen and (max-width: 767px) {
-  .container-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 6px;
-  }
+
+.container-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 480px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 6px;
 }
-
-
 
 .btn-nav {
   display: none;
@@ -25,16 +23,6 @@ header {
 
 .nav {
   display: none;
-}
-
-.container-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 6px;
 }
 
 .header {
@@ -54,15 +42,18 @@ header {
   position: relative;
   &__title {
     font-family: 'Titan One';
-    font-size: 38px;
-    line-height: 44px;
+    font-size: 26px;
+line-height: 30px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $whiteColor;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
   }
   &__title-second {
-    font-size: 58px;
-    line-height: 44px;
+    font-size: 48px;
+    line-height: 46px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primaryColor;
@@ -73,99 +64,110 @@ header {
   }
   &__btn-type-first,
   &__btn-type-second {
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 8px;
+    line-height: 10px;
     color: $whiteColor;
     background: $primaryColor;
     border-radius: 20px;
     border: none;
-    padding: 11px 23px;
+    padding: 8px 15px;
     cursor: pointer;
   }
   &__btn-type-second {
     background: $whiteColor;
+    color: $primaryColor;
   }
 
   &__about-milk {
-    padding-bottom: 84px;
-    width: 470px;
-    padding-left: 286px;
+    display: none;
   }
-  &__about-milk-details {
-    font-size: 14px;
-    line-height: 140%;
-    color: $whiteColor;
-    margin-bottom: 20px;
-  }
-
-  &__title {
-    display: flex;
-    flex-direction: column;
-    width: 277px;
-  }
-
-  &__title-container {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-  }
-
-  &__number-list-text {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    color: $whiteColor;
-    text-transform: lowercase;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-  }
-  &__number-list-nr {
-    font-family: 'Titan One';
-    font-size: 46px;
-    line-height: 53px;
-    text-align: right;
-    letter-spacing: 0.04em;
+  &__pictures {
     z-index: 3;
-    color: $primaryColor;
-    display: flex;
-    flex-direction: column;
+    &::after {
+      content: '';
+      background-color: #ffa5ba;
+      z-index:2;
+      border-radius: 50%;
+      position: absolute;
+      width: 346px;
+      height: 344px;
+      bottom: 80px;
+    right: 10px;
+    }
   }
-}
-
-.hero {
   &__pictures-milk,
   &__pictures-eat {
     display: none;
   }
 
-    &__pictures-ice {
-      position: absolute;
-       
+  &__pictures-ice {
+    position: absolute;
+    width: 171px;
+    bottom: 0;
+    z-index: 5;
+    right: 100px;
+  }
+  
+  &__number-list {
+    display: none;
+  }
+   &__title-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    z-index: 7;
+    position: relative;
+    left: 20%;
+   }
+}
+.hero-section {
+    padding-top: 120px;
+  padding-bottom: 158px;
+}
+ 
+
+@media screen and (min-width: 768px) {
+  .btn-nav {
+    background: $whiteColor;
+    border-radius: 22px;
+    padding: 10px 37px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: $primaryColor;
+    gap: 12px;
+    cursor: pointer;
+    transition: background-color 250ms $main-transition-timing-function;
+    &:hover {
+      background-color: #ecebeb;
     }
   }
 
+  .hero__pictures-milk,
+  .hero__pictures-eat {
+    display: block;
+  }
 
-
-
-@media screen and (min-width: 768px) {
   .btn-wrapper {
-  display: flex;
+    display: flex;
     gap: 32px;
   }
   .arrow-button--mod {
     width: 18px;
-    height: 18px;}
-    .arrow-button__svg {
-      width: 11px;}
+    height: 18px;
+  }
+  .arrow-button__svg {
+    width: 11px;
+  }
   .header {
     padding-top: 32px;
   }
   .hero-section {
-    padding-left: 32px;
-    padding-right: 32px;
+    padding:0 32px;
     &__wrapper {
       display: flex;
       justify-content: space-between;
@@ -174,11 +176,11 @@ header {
       padding-bottom: 20px;
     }
   }
-}
+
 .container-header {
   padding-left: 32px;
   padding-right: 32px;
-  width: 786px;
+  min-width: 786px;
 }
 .hero {
   position: relative;
@@ -188,8 +190,10 @@ header {
     padding-left: 155px;
     position: relative;
     padding-top: 35px;
+    display: block;
+    
   }
-  
+
   &__title {
     font-family: 'Titan One';
     font-size: 22px;
@@ -250,8 +254,12 @@ header {
     flex-direction: column;
     gap: 24px;
     padding-top: 10px;
+    position: relative;
+    left: 0;
   }
-
+  &__number-list {
+    display: block;
+  }
   &__number-list-text {
     font-size: 8px;
     line-height: 10px;
@@ -259,8 +267,6 @@ header {
     color: $whiteColor;
     display: flex;
     flex-direction: column;
-    
-    
   }
   &__number-list-nr {
     font-family: 'Titan One';
@@ -324,39 +330,39 @@ header {
     }
   }
 }
-
-.btn-nav {
-  background: $whiteColor;
-  border-radius: 22px;
-  padding: 10px 37px;
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 21px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  color: $primaryColor;
-  gap: 12px;
-  cursor: pointer;
-  transition: background-color 250ms $main-transition-timing-function;
-  &:hover {
-    background-color: #ecebeb;
-  }
-}
-.hero__pictures-milk,
-.hero__pictures-eat {
-  display: block;
 }
 
 @media screen and (min-width: 1280px) {
-
+  .btn-nav {
+    background: $whiteColor;
+    border-radius: 22px;
+    padding: 10px 37px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: $primaryColor;
+    gap: 12px;
+    cursor: pointer;
+    transition: background-color 250ms $main-transition-timing-function;
+    &:hover {
+      background-color: #ecebeb;
+    }
+  }
+  .hero__pictures-milk,
+  .hero__pictures-eat {
+    display: block;
+  }
   .arrow-button--mod {
     width: 26px;
-    height: 26px;}
+    height: 26px;
+  }
 
   .container-header {
-    width: 1280px;
+    min-width: 1280px;
     padding-left: 16px;
     padding-right: 16px;
     z-index: 3;
@@ -409,9 +415,8 @@ header {
 
   .hero-section {
     position: relative;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-bottom: 40px;
+    padding : 0 16px 40px;
+ 
     &__wrapper {
       padding-top: 60px;
       padding-bottom: 40px;
@@ -460,9 +465,10 @@ header {
       padding: 11px 23px;
     }
     &__about-milk {
-            width: 470px;
-           padding-bottom: 53px;
+      width: 470px;
+      padding-bottom: 53px;
       padding-left: 230px;
+      display: block;
     }
     &__about-milk-details {
       font-size: 14px;
@@ -471,7 +477,7 @@ header {
       margin-bottom: 20px;
       width: 200px;
     }
-      &__title {
+    &__title {
       display: flex;
       flex-direction: column;
       width: 277px;
@@ -481,7 +487,8 @@ header {
       display: flex;
       flex-direction: column;
       gap: 24px;
-       
+      position: relative;
+      left: 0;
     }
 
     &__number-list-text {
@@ -491,7 +498,6 @@ header {
       color: $whiteColor;
       display: flex;
       flex-direction: column;
-      
     }
     &__number-list-nr {
       font-family: 'Titan One';
@@ -543,7 +549,6 @@ header {
       position: absolute;
       bottom: 60px;
       width: 213px;
-      
     }
 
     &__pictures {
@@ -557,7 +562,7 @@ header {
         width: 534px;
         height: 534px;
         bottom: 72px;
-    right: 139px;
+        right: 139px;
       }
     }
   }
