--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -127,13 +127,14 @@
 }
 .mobile-menu {
   &__list {
-    gap: 23px;
     display: flex;
     flex-direction: column;
     padding-top: 20px;
   }
 
   &__link {
+    padding-top: 11px;
+    padding-bottom: 11px;
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
@@ -145,4 +146,14 @@
       color: #d41443;
     }
   }
+}
+.mobile-menu__item::after {
+  content: '';
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  border-radius: 1px;
+  background-color: #e1e1e1;
 }
