--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -1,105 +1,98 @@
-<!DOCTYPE html>
-<html>
+<!--HOW-ITS-MADE-section-->
+<section class="third-section made">
+  <div class="container">
+    <h3 class="made__subtitle">tradition and love</h3>
+    <h2 class="made__title">how it’s made?</h2>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Titan+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/sass/main.css">
-</head>
+    <div class="made-section">
+      <picture class="made-section__image">
+        <source
+          media="screen and (max-width: 767px)"
+          srcset="./images/made-M-1x.png 1x, ./images/made-M-2x.png 2x"
+        />
+        <source
+          media="screen and (min-width: 768px) and (max-width: 1279px)"
+          srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x"
+        />
 
-<body>
-    
+        <source
+          media="screen and (min-width: 1280px)"
+          srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x"
+        />
 
-    <main>
+        <img src="/src/images/made-D-1x.png" alt="cow1" />
+      </picture>
 
-        <!--HOW-ITS-MADE-section-->
-        <section class="third-section made">
-            <div class="container">
-                <h3 class="made__subtitle">tradition and love</h3>
-                <h2 class="made__title">how it’s made?</h2>
-        
-                <div class="made-section">
-                    <picture class="made-section__image">
-                        <source media="screen and (max-width: 767px)"
-                            srcset="./images/made-M-1x.png 1x, ./images/made-M-2x.png 2x" />
-                        <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                            srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x " />
-        
-                        <source media="screen and (min-width: 1280px)"
-                            srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x " />
-        
-                        <img src="/src/images/made-D-1x.png" alt="cow1">
-        
-                    </picture>
-        
-        
-                    <div class="made-section__text">
-                        <p class="made-section__text made-section__text--text1">Fusce ut velit laoreet, tempus arcu eu, molestie
-                            tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-                            justo fringilla.</p>
-        
-                        <div class="made-section__background-container">
-                        </div>
+      <div class="made-section__text">
+        <p class="made-section__text made-section__text--text1">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+          justo fringilla.
+        </p>
 
-                        <p class="made-section__text made-section__text--text2">Curabitur lacinia enim at ex blandit, vel
-                            pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod
-                            nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                        </p>
-                        <p class="made-section__text made-section__text--text3">Aliquam erat volutpat. Aenean accumsan.</p>
-        
-                        <div class="how-button">
-                            <p id="how-button__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                        </div>
-        
-                        <button class="made-section__button" type="button" onclick="howButton()">Read more &nbsp;
-                            <svg class="" width="7px" height="8px">
-                                <use href="./images/icons-svg-how.svg#icon-Vector-1"></use>
-        
-                            </svg>
-                        </button>
-        
-                    </div>
-        
-                </div>
-                <section class="third-section quantity">
-                    <div class="quantity__container">
-                        <ul class="quantity__list">
-                            <li class="quantity__item quantity__item--margin">
-                                <svg class="quantity__svg" width="33px" height="50px">
-                                    <use href="/src/images//icons-svg-how.svg#icon-Group-5"></use>
-                                </svg>
-                                <p class="quantity__title">721</p>
-                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                            </li>
-                            <li class="quantity__item">
-        
-                                <svg class="quantity__svg" width="50px" height="50px">
-                                    <use href="/src/images/icons-svg-how.svg#icon-apples"></use>
-                                </svg>
-                                <h3 class="quantity__title">16kg</h3>
-                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        
-                            </li>
-                            <li class="quantity__item quantity__item--padding">
-        
-                                <svg class="quantity__svg" width="44px" height="50px">
-                                    <use href="/src/images/icons-svg-how.svg#icon-Group-6"></use>
-                                </svg>
+        <div class="made-section__background-container"></div>
 
-                                <h3 class="quantity__title">84</h3>
-                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-            </div>
-        </section>
-    </main>
-    <script src="/js/how-button.js"></script>
-</body>
+        <p class="made-section__text made-section__text--text2">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidunt.
+        </p>
+        <p class="made-section__text made-section__text--text3">
+          Aliquam erat volutpat. Aenean accumsan.
+        </p>
 
-</html>
+        <div class="how-button">
+          <p id="how-button__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </div>
+
+        <button
+          class="made-section__button"
+          type="button"
+          onclick="howButton()"
+        >
+          Read more &nbsp;
+          <svg class="" width="7px" height="8px">
+            <use href="./images/icons-svg-how.svg#icon-Vector-1"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="third-section quantity">
+      <div class="quantity__container">
+        <ul class="quantity__list">
+          <li class="quantity__item quantity__item--margin">
+            <svg class="quantity__svg" width="33px" height="50px">
+              <use href="/src/images//icons-svg-how.svg#icon-Group-5"></use>
+            </svg>
+            <p class="quantity__title">721</p>
+            <p class="quantity__text">
+              Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+            </p>
+          </li>
+          <li class="quantity__item">
+            <svg class="quantity__svg" width="50px" height="50px">
+              <use href="/src/images/icons-svg-how.svg#icon-apples"></use>
+            </svg>
+            <h3 class="quantity__title">16kg</h3>
+            <p class="quantity__text">
+              Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+            </p>
+          </li>
+          <li class="quantity__item quantity__item--padding">
+            <svg class="quantity__svg" width="44px" height="50px">
+              <use href="/src/images/icons-svg-how.svg#icon-Group-6"></use>
+            </svg>
+
+            <h3 class="quantity__title">84</h3>
+            <p class="quantity__text">
+              Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
