--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -23,6 +23,7 @@ h3 {
   margin: 0px auto;
   position: relative;
   background-color: $secondary-background-color;
+  height: 1564px;
 
   &__subtitle {
     font-family: 'Titan One';
@@ -124,6 +125,8 @@ h3 {
 .container {
   width: 320px;
   margin: 0px auto;
+}
+.how-its-made-container {
   background-color: $secondary-background-color;
 }
 
@@ -179,6 +182,7 @@ h3 {
   }
 
   .made {
+    height: 1092px;
     &__subtitle {
       font-size: 26px;
       line-height: 30px;
@@ -264,6 +268,7 @@ h3 {
   }
 
   .made {
+    height: 1229px;
     &__subtitle {
       font-size: 30px;
       line-height: 34px;
