--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -193,6 +193,7 @@ p {
 @media only screen and (min-width: 768px) and (max-width: 1279px) {
   .p-section {
     max-width: 768px;
+    height: 854px;
   }
   .p-titles__heading {
     font-size: 48px;
@@ -264,6 +265,7 @@ p {
   .p-section {
     max-width: 320px;
     margin: 0 auto;
+    height: 2087px;
     // height: 2087px;
   }
   .p-titles {
