--- a/src/sass/components/_contact-section.scss
+++ b/src/sass/components/_contact-section.scss
@@ -13,7 +13,7 @@
 
 .contacts-list {
   display: flex;
-
+ 
   &__item-product {
     color: $whiteColor;
   }
@@ -49,6 +49,15 @@
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
     padding: 40px 32px;
+
+    transition: transform 0.3s ease 0s;
+    &:hover,
+    &:focus {
+      transform: scale(1.05);
+      cursor: pointer;
+    }
+    
+  
   }
   &__item-text {
     color: #907e82;
