--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -36,10 +36,10 @@
           </h1>
           <div class="hero__btns">
           <div>
-              <a class="hero__link" href="#products"><button class="hero__btn" type="button">Products </button></a>
+              <a class="hero__link" href="#products"></a><button class="hero__btn" type="button">Products </button>
           </div>
           <div>
-              <a class="hero__link hero__link--red" href="#about"><button class="hero__btn hero__btn--white" type="button">How it’s made?</button></a> 
+              <a class="hero__link hero__link--red" href="#about"></a><button class="hero__btn hero__btn--white" type="button">How it’s made?</button> 
           </div>
         </div>
           <div class="info">
@@ -48,18 +48,18 @@
             srcset="./images/header/milk-img.png 1x, ./images/header/milk-img@2x.png 2x"
             src="./images/header/milk-img.png"
             alt="Milk"
-          />
+          >
           <div class="info__side">
             <p class="info__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et
             </p>
             <div>
-              <a class="hero__link" href="#gallery"><button class="info__btn" type="button">
+              <a class="hero__link" href="#gallery"></a><button class="info__btn" type="button">
                 <svg class="info__icon" width="20" height="10">
                   <use href="./images/header/icons.svg#icon-arrow"></use>
                 </svg>
-              </button></a>
+              </button>
           </div>
           </div>
           </div>
@@ -86,7 +86,7 @@
               srcset="./images/header/header-img.png 1x, ./images/header/header-img@2x.png 2x"
               src="./images/header/header-img.png"
               alt="Enjoy icecream"
-            />
+            >
         </div>
       </section>
     </div>
