--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,7 +1,7 @@
 .about-section {
     background: #FFF5F6;  
     background-repeat: no-repeat; 
-    padding: 60px 16px 16px 20px;
+    padding: 60px 16px 16px 20px;    
     &__subtitle{
         font-family: 'Titan One';
         font-style: normal;
@@ -109,14 +109,22 @@
   }
 
 @media screen and (max-width :767px) {
-    .about-section{
+    .about-section{ 
         background-image: url(../images/about/milk-M-1x.png);
         background-size: 100%; 
-        background-position: bottom;  
+        background-position: bottom; 
         &__list {
             flex-wrap: wrap;
             padding-right: 80px;
         } 
+    }
+}
+
+@media screen and (max-width :767px) and (min-device-pixel-ratio: 2) ,
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .about-section {        
+        background-image: url(../images/about/milk-M-2x.png); 
     }
 }
 
@@ -140,6 +148,20 @@
             font-size: 14px;
             line-height: 25px;
         }
+    }
+} 
+
+// @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2) ,
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     .about-section {        
+//         background-image: none; 
+//     }
+// }
+
+@media screen and (min-width :768px) {
+    .about-section__title {
+        animation: animate150 15000ms infinite 1000ms;
     }
 }  
 
@@ -172,11 +194,13 @@
     }   
 }
 
-@media screen and (min-width :768px) {
-    .about-section__title {
-        animation: animate150 15000ms infinite 1000ms;
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2) ,
+    screen and (min-width: 1200px) and (min-resolution: 192dpi),
+    screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+    .about-section {        
+        background-image: url(../images/about/milk-D-2x.png); 
     }
-}    
+}  
 
 @keyframes animate150 {
     0% {
@@ -190,4 +214,4 @@
     100% {
       transform: scale(1);
     }
-  }
+}
